# ga_remake

./: pyproject.toml
data/: dataset_phishing_reduced.csv
src/: data_cleaning.py  ga_base.py  ga_classification.py  ga_regressor.py  model_making.py  models.py  performance_metric.py
